cleaning up parsing code

--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "express": "^4.17.1",
     "knex": "^0.20.10",
     "node": "^13.8.0",
+    "node-fetch": "^2.6.0",
+    "xml2js": "^0.4.23",
     "xmldom": "^0.2.1"
   }
 }
