--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "MMSG project with XML data and operational Front End",
   "main": "index.js",
   "scripts": {
-    "start": "echo \"Error: no test specified\" && exit 1"
+    "start": " nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -17,11 +17,18 @@
   },
   "homepage": "https://github.com/a-soren/MMSG-project#readme",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-xml-bodyparser": "^0.3.0",
+    "helmet": "^3.21.2",
     "knex": "^0.20.10",
     "node": "^13.8.0",
     "node-fetch": "^2.6.0",
+    "nodemon": "^2.0.2",
+    "xml-js": "^1.6.11",
     "xml2js": "^0.4.23",
+    "xml2json": "^0.12.0",
     "xmldom": "^0.2.1"
   }
 }
