--- a/package.json
+++ b/package.json
@@ -20,15 +20,10 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-xml-bodyparser": "^0.3.0",
     "helmet": "^3.21.3",
-    "knex": "^0.20.10",
     "node": "^13.8.0",
     "node-fetch": "^2.6.0",
     "nodemon": "^2.0.2",
-    "xml-js": "^1.6.11",
-    "xml2js": "^0.4.23",
-    "xml2json": "^0.12.0",
-    "xmldom": "^0.2.1"
+    "xml-js": "^1.6.11"
   }
 }
